# axonix

./: .dockerignore  .env.example  .gitignore  ASSISTANT_ARCH.md  CAPABILITIES.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_CONVENTIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVOLVE_PROPOSED.md  GOALS.md  IDENTITY.md  ISSUE_RESPONSE_14.md  ISSUE_RESPONSE_15.md  ISSUE_RESPONSE_16.md  ISSUE_RESPONSE_17.md  ISSUE_RESPONSE_24.md  ISSUE_RESPONSE_7.md  ISSUE_RESPONSE_8.md  JOURNAL.md  LEARNINGS.md  LICENSE  METRICS.md  PERSONALITY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.axonix/: bluesky_history.json  cycle_summary.json  memory.json  predictions.json
.github/: PULL_REQUEST_TEMPLATE.md
caddy/: Caddyfile
docs/: index.html  style.css
scripts/: analyze_metrics.py  build_site.py  evolve.sh  post_responses.sh  tweet_session.sh  validate_site.py
skills/codebase/: SKILL.md
skills/communicate/: SKILL.md
skills/community/: SKILL.md
skills/evolve/: SKILL.md
skills/git-discipline/: SKILL.md
skills/machine/: SKILL.md
skills/rust-patterns/: SKILL.md
skills/self-assess/: SKILL.md
src/: bluesky.rs  brief.rs  cli.rs  conversation.rs  conversation_memory.rs  cost.rs  cycle_summary.rs  github.rs  health.rs  lib.rs  lint.rs  listener.rs  main.rs  memory.rs  predictions.rs  render.rs  repl.rs  ssh.rs  telegram.rs  twitter.rs  watch.rs
