[package]
name = "axonix"
version = "0.2.0"
edition = "2021"
default-run = "axonix"
description = "A coding agent that evolves itself. Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/coe07182/axonix"

[dependencies]
yoagent = "0.7"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
